--- a/src/Calendar.less
+++ b/src/Calendar.less
@@ -162,4 +162,17 @@
       }
     }
   }
+
+  .react-calendar__month-view__weekNumbers-text{
+    padding: 0.5em;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 0.75em;
+    max-width: 100%;
+    min-width: 100%;
+  }
+  .react-calendar__tile-disabled{
+    background-color: #f0f0f0;
+  }
 }
